--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ span {
     color: rgba(0, 0, 0, 1);
     font-weight: 800;
     transition: all 0.2s;
+    -webkit-tap-highlight-color: transparent;
 }
 
 span:hover {
