--- a/style.css
+++ b/style.css
@@ -19,27 +19,9 @@
 @font-face {
     font-family: 'Poppins';
     font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: local('Poppins Bold'), local('Poppins-Bold'), url(https://fonts.gstatic.com/s/poppins/v8/pxiByp8kv8JHgFVrLCz7Z1xlFQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 800;
     font-display: swap;
     src: local('Poppins ExtraBold'), local('Poppins-ExtraBold'), url(https://fonts.gstatic.com/s/poppins/v8/pxiByp8kv8JHgFVrLDD4Z1xlFQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 900;
-    font-display: swap;
-    src: local('Poppins Black'), local('Poppins-Black'), url(https://fonts.gstatic.com/s/poppins/v8/pxiByp8kv8JHgFVrLBT5Z1xlFQ.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -68,14 +50,15 @@ body {
 }
 
 .main {
-    min-width: 450px;
-    min-height: 300px;
+    min-width: 600px;
+    min-height: 400px;
     width: 30vw;
     height: 20vw;
     background: rgba(255, 183, 207, 0.85);
     display: flex;
     align-items: center;
     justify-content: space-around;
+    font-size: 1em;
 }
 
 .text {
